<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentActivity">

    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/first_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/first_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@id/first_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/first_name_label"/>

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/last_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_label" />

    <EditText
        android:id="@+id/last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/last_name_label"
        app:layout_constraintStart_toEndOf="@id/last_name_label"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/dob_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_label" />

    <EditText
        android:id="@+id/dob_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/dob_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/dob_label"
        app:layout_constraintStart_toEndOf="@id/dob_label"/>

    <Button
        android:id="@+id/button_appointment_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_app_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTime_label" />

    <TextView
        android:id="@+id/patient_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/patient_ID_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_label" />

    <EditText
        android:id="@+id/patient_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patient_hint"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/patient_label"
        app:layout_constraintStart_toEndOf="@id/patient_label"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/appDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/app_date_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_label" />

    <TextView
        android:id="@+id/appTime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/app_time_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appDate_label" />

    <EditText
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/appDate_label"
        app:layout_constraintStart_toEndOf="@id/appDate_label"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="time"
        app:layout_constraintBaseline_toBaselineOf="@id/appTime_label"
        app:layout_constraintStart_toEndOf="@id/appTime_label"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>