<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/contact_first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/first_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_label" />

    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/message_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_label" />

    <TextView
        android:id="@+id/patient_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/patient_ID_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_last_name_label" />

    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone_number_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_email_label" />

    <TextView
        android:id="@+id/contact_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/email_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_id_label" />

    <TextView
        android:id="@+id/contact_last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/last_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_first_name_label" />

    <Button
        android:id="@+id/button_contact_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_contact_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_label" />

    <TextView
        android:id="@+id/instruction_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/contact_instruction_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact_first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/contact_first_name_label"
        app:layout_constraintTop_toTopOf="@id/contact_first_name_label"
        app:layout_constraintStart_toEndOf="@id/contact_first_name_label"
        android:autofillHints="" />

    <EditText
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@id/message_label"
        app:layout_constraintTop_toTopOf="@id/message_label"
        app:layout_constraintStart_toEndOf="@id/message_label"
        android:autofillHints="" />

    <EditText
        android:id="@+id/contact_last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/contact_last_name_label"
        app:layout_constraintTop_toTopOf="@id/contact_last_name_label"
        app:layout_constraintStart_toEndOf="@id/contact_last_name_label"
        android:autofillHints="" />

    <EditText
        android:id="@+id/patient_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/patient_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/patient_id_label"
        app:layout_constraintTop_toTopOf="@id/patient_id_label"
        app:layout_constraintStart_toEndOf="@id/patient_id_label"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/contact_email_label"
        app:layout_constraintTop_toTopOf="@id/contact_email_label"
        app:layout_constraintStart_toEndOf="@id/contact_email_label"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_number_label"
        app:layout_constraintTop_toTopOf="@id/phone_number_label"
        app:layout_constraintStart_toEndOf="@id/phone_number_label"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>